Added google webmaster tools Enhance 404 pages to 404 page.
git-svn-id: http://shrub.ca:8080/svn/swc@80 a73b2e98-c212-4573-bb7c-f9b89b9be6a6

--- a/weblog/public/404.html
+++ b/weblog/public/404.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<body>
-  <h1>[404]: File not found</h1>
-  <p>Sorry, the file you requested could not be found.</p>
-</body>
+  <body>
+    <h1>Sorry, the page you requested could not be found</h1>
+  </body>
 </html>
